# starter-app

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  CHANGELOG.md  Makefile  README.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
.vscode.example/: launch.json
deployment/: otel-collector-config.yaml
deployment/keycloak/: CONFIGURATION.md  configure-master-realm.sh  starter-app-realm-export.json
docs/: README.md  features.md  index.md
docs/architecture/: cqrs-pattern.md  dependency-injection.md
docs/authentication/: session-management.md
docs/development/: documentation-config.md
docs/frontend/: build-process.md
docs/getting-started/: installation.md  running-the-app.md
docs/infrastructure/: docker-environment.md
docs/observability/: tracing.md
docs/troubleshooting/: common-issues.md
notes/: CLOUDEVENT_PUBLISHING_FIX.md  SELF_CONTAINED_REFACTOR.md
scripts/: rename_project.py  update-mkdocs-config.py
src/: main.py
src/api/: dependencies.py
src/application/: settings.py
src/domain/: models.py
src/infrastructure/: __init__.py  session_store.py
src/observability/: __init__.py  metrics.py
src/ui/: package-lock.json  package.json
tests/: conftest.py  test_auth_service.py  test_rename_integrity.py  test_session_store.py
tests/application/: test_commands.py  test_queries.py
tests/cases/: test_rename_integrity.py
tests/domain/: test_task_entity.py
tests/fixtures/: __init__.py  factories.py  mixins.py
tests/infrastructure/: test_session_stores.py
(+53 files in other folders)
