[tool.poetry]
name = "starter-app"
version = "0.1.0"
description = "Starter App - A modern task management system with Neuroglia framework"
authors = ["Bruno van de Werve <bvandewe@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
neuroglia-python = ">=0.6.7,<0.7.0"
python-keycloak = ">=5.8.1,<6.0.0"
itsdangerous = ">=2.2.0,<3.0.0"
redis = ">=7.0.1,<8.0.0"
motor = "^3.7.1"
httpx = ">=0.24.0,<0.28.0"  # Added for JWKS fetching (RS256 verification)

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
mypy = "^1.11.0"
pytest-cov = "^5.0.0"
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check (assert is expected in tests)
